<resources>
    <string name="app_name">Fancy Keyboard Theme</string>
    <string name="main_menu_share">Share our Apps</string>
    <string name="main_menu_rate">Find us in store</string>
    <string name="main_menu_set">Setting</string>
    <string name="share_link">https://play.google.com/store/apps/details?id=</string>
    <string name="download_apply">Download &amp; Apply</string>
    <string name="apply_title">Applying</string>
    <string name="more_feature">Activate Soft Keyboard to enable more features!</string>
    <string name="apply_step1_select">Step 1: Select</string>
    <string name="apply_step2_eanble">Step 2: Enable</string>
    <string name="succ_apply">Application successful</string>
    <string name="fail_apply">Application failed, please try again</string>
    <string name="text_promote">For normal use, please enter the setting to complete the setting steps.</string>
    <string name="loading_keyboard">Loading…</string>
    <string name="but_home">Home</string>
    <string name="but_info">Menu</string>
</resources>