<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".activity.DetailsActivity">

    <!--主视图-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/apply_back"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:src="@drawable/svg_return"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/theme_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/apply_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/id_hint"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/backgroundLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/more_feature"
        android:textColor="@color/theme_color"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/id_step1"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_below="@id/id_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:background="@drawable/shape_theme_set"
        android:gravity="center"
        android:text="@string/apply_step1_select"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/id_step2"
        android:layout_width="200dp"
        android:layout_height="43dp"
        android:layout_below="@id/id_step1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_theme_set"
        android:gravity="center"
        android:text="@string/apply_step2_eanble"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>