<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".activity.DetailsActivity">

    <!--主视图-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_back"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:src="@drawable/svg_return"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/theme_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/theme_image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@id/backgroundLayout"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/theme_set"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/theme_image"
        android:layout_marginStart="66dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="66dp"
        android:background="@drawable/shape_theme_set"
        android:gravity="center"
        android:text="@string/download_apply"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <ProgressBar
        android:id="@+id/theme_preloading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/theme_image"
        android:layout_alignBottom="@id/theme_image"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/theme_color" />

    <RelativeLayout
        android:id="@+id/cover_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading_keyboard"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>